test/parallel/forall/checks/with-this.good
with-this.chpl:5: error: cannot apply a forall or task intent to 'this'
